NetBSD Problem Report #50561

From www@NetBSD.org  Tue Dec 15 11:46:12 2015
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 410087ACC5
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 15 Dec 2015 11:46:12 +0000 (UTC)
Message-Id: <20151215114611.63DA97ACCA@mollari.NetBSD.org>
Date: Tue, 15 Dec 2015 11:46:11 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/external/bsd/gnu-efi/dist/lib/hand.c: 3 * bad va_list handling
X-Send-Pr-Version: www-1.0

>Number:         50561
>Category:       misc
>Synopsis:       src/sys/external/bsd/gnu-efi/dist/lib/hand.c: 3 * bad va_list handling
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    misc-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Dec 15 11:50:00 +0000 2015
>Closed-Date:    Tue Dec 15 12:39:51 +0000 2015
>Last-Modified:  Tue Dec 15 12:40:00 +0000 2015
>Originator:     David Binderman
>Release:        cvs dated 20151215
>Organization:
>Environment:
>Description:

> [src/sys/external/bsd/gnu-efi/dist/lib/hand.c:515]: (error) va_list 'args' was opened but not closed by va_end().
> [src/sys/external/bsd/gnu-efi/dist/lib/hand.c:554]: (error) va_list 'args' was opened but not closed by va_end().
> [src/sys/external/bsd/gnu-efi/dist/lib/hand.c:634]: (error) va_list 'args' was opened but not closed by va_end().

All calls to va_start must have a matching call to va_end.

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Tue, 15 Dec 2015 12:39:51 +0000
State-Changed-Why:
christos committed a fix. Thanks!


From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50561 CVS commit: src/sys/external/bsd/gnu-efi/dist/lib
Date: Tue, 15 Dec 2015 07:36:10 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Tue Dec 15 12:36:10 UTC 2015

 Modified Files:
 	src/sys/external/bsd/gnu-efi/dist/lib: hand.c

 Log Message:
 PR/50561: David Binderman: Add missing va_end calls.


 To generate a diff of this commit:
 cvs rdiff -u -r1.1.1.1 -r1.2 src/sys/external/bsd/gnu-efi/dist/lib/hand.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.