PR/50561: David Binderman: Add missing va_end calls.